--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,10 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.7</maven.compiler.source>
+        <maven.compiler.target>1.7</maven.compiler.target>
+
         <guava.version>15.0</guava.version>
         <assertj-core.version>1.5.0</assertj-core.version>
     </properties>
